Justify option fix #41

--- a/wallabag/html-ressources/main.css
+++ b/wallabag/html-ressources/main.css
@@ -168,8 +168,7 @@ header.mbm {
 
 #article {
   width: 70%;
-/*  margin-bottom: 3em; */
-  text-align: justify;
+  text-align: left;
   word-wrap: break-word;
 }
 
